@@ -386,6 +386,16 @@ instead.</i></p>
     <td align="center" valign="top">all</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">source</td>
+    <td valign="top">Necessary to enable javadoc to handle assertions
+    present in J2SE v 1.4 source code. Set this to &quot;1.4&quot; to
+    documents code that compiles using <code>&quot;javac -source
+    1.4&quot;</code>.  Will be ignored if you use a custom
+    doclet.</td>
+    <td align="center" valign="top">1.4</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h4><a name="groupattribute">Format of the group attribute</a></h4>
